# librustvoting

./: .gitignore  BOOTSTRAP.md  CLAUDE.md  Cargo.toml  DEMO.md  JOIN.md  Makefile  Package.swift  README.md  SETUP_GENESIS.md  SETUP_JOIN.md  SETUP_NULLIFIER_SERVICE.md  go.mod  join-dev.sh  join.sh  mise.toml  nullifier.sh  vercel.json
.cursor/rules/: build-simulator.mdc  linear-voting.mdc  shielded-vote-book.mdc  sync-design.mdc  sync-zkp.mdc
.github/workflows/: audit.yml  ci.yml  fund-validator.yml  imt-integration.yml  nullifier-ingest-deploy.yml  release.yml  sdk-chain-deploy.yml  vc-van-realism.yml  vote-commitment-tree.yml
api/: codec.go  codec_test.go  tx_wrapper.go
app/: ante.go  decode.go
circuits/tests/: generate_fixtures.rs
contrib-notifier/: .env.example  package-lock.json  package.json  tsconfig.json  vercel.json
contrib-notifier/api/: poll.ts  refresh.ts  reset.ts
docs/: BOOTSTRAP.md  SETUP_GENESIS.md  SETUP_JOIN.md  SETUP_NULLIFIER_SERVICE.md  ai_setup.md  cosmos-sdk-messages-spec.md  infra.md  mobile-voting-api.md  mobile-voting-architecture.md  shielded-vote-book-index.md  vc-van-testing.md  zellic-ypir-audit-scope.md
docs/specs/: gov-steps-v1.md
e2e-tests/: Cargo.toml  VOTE_THROUGHPUT.md
e2e-tests/src/: api.rs  ecies.rs  elgamal.rs  fixtures.rs  lib.rs  metrics.rs  payloads.rs  setup.rs
e2e-tests/tests/: ceremony_bootstrap.rs  ceremony_flow.rs  create_round_for_zashi.rs  generate_fixtures.rs  round_activation.rs  sync_stress.rs  voter_throughput.rs  voting_flow.rs  voting_flow_librustvoting.rs
helper-server/: Cargo.toml  README.md
helper-server/src/: api.rs  chain_client.rs  lib.rs  main.rs  mock_tree.rs  nullifier.rs  processor.rs  store.rs  tree.rs  types.rs
helper-server/tests/: integration.rs
keystone-qr/: README.md
librustvoting/: Cargo.toml  README.md
librustvoting/src/: action.rs  decompose.rs  elgamal.rs  governance.rs  hotkey.rs  lib.rs  tree_sync.rs  types.rs  vote_commitment.rs  wallet_notes.rs  witness.rs  zkp1.rs  zkp2.rs
librustvoting/src/storage/: migrations.rs  mod.rs  operations.rs  queries.rs
librustvoting/src/storage/migrations/: 001_init.sql
nullifier-ingest/: Makefile
nullifier-ingest/docs/: deploy-setup.md  nullifier-query-server.service
nullifier-ingest/imt-tree/: Cargo.toml
nullifier-ingest/imt-tree/src/: lib.rs  tree.rs
nullifier-ingest/imt-tree/src/tree/: mod.rs  nullifier_tree.rs  tests.rs
nullifier-ingest/imt-tree/tests/: imt_circuit_integration.rs
nullifier-ingest/nullifier-tree/: Cargo.toml  Makefile  README.md
nullifier-ingest/nullifier-tree/src/: tree.rs
nullifier-ingest/nullifier-tree/src/vote/: decrypt.rs  download.rs  election.rs  mod.rs
nullifier-ingest/pir-export/: Cargo.toml
nullifier-ingest/pir-export/src/: lib.rs  main.rs  tier0.rs  tier1.rs  tier2.rs
nullifier-ingest/pir-export/tests/: round_trip.rs
nullifier-ingest/pir-test/: Cargo.toml
nullifier-ingest/pir-test/src/: main.rs
nullifier-ingest/service/: Cargo.toml  Makefile
nullifier-ingest/service/src/: config.rs  file_store.rs  lib.rs  sync_nullifiers.rs  tree_db.rs
nullifier-ingest/service/tests/: api_integration.rs
orchard/: CHANGELOG.md  Cargo.toml
orchard/benches/: delegation.rs
orchard/src/: address.rs  builder.rs  circuit.rs  constants.rs  keys.rs  lib.rs  note.rs  pczt.rs  spec.rs  tree.rs  value.rs  zip32.rs
plans/: 01_halo2_ffi_verification_infrastructure.plan.md  02_toy_proof_ante_verification.plan.md  03_redpallas_sig_verification.plan.md  04_e2e_voting_flow_test.plan.md  06_nullifier_namespace_scoping.plan.md  07_session_fields_spec_alignment.plan.md  0_init_plan.md  10_elgamal_pallas_baseline.plan.md  11_wire_elgamal_tally_on-chain_82924961.plan.md  12_vote_tree_client-server_poc_c24eb944.plan.md  13_vote_tree_sdk_integration_901751c6.plan.md  14_rust_e2e_api_tests_19bf71fc.plan.md  15_ea_key_ceremony_keeper_9e78e72b.plan.md  17_auto-ack_prepareproposal_ceremony_847ed1fb.plan.md  18_threshold_decryption_design_d3f0020c.plan.md  votingsession_status_lifecycle_5f0cb2c8.plan.md
plans/todo/: incremental_tree_ffi_1f5d0b72.plan.md  (+1 more)
scripts/: ai-audit.sh  audit-prompt.md  remote-ceremony.sh
sdk/: Makefile  README.md  go.mod
sdk/circuits/: Cargo.toml
sdk/circuits/include/: shielded_vote_circuits.h  zally_circuits.h
sdk/circuits/src/: ffi.rs  lib.rs  nc_root.rs  votetree.rs
sdk/circuits/tests/: generate_fixtures.rs
shielded_vote_generator_ui/: .env.example  index.html  package-lock.json  package.json  plan.md  vercel.json  vite.config.ts
src/: action.rs  decompose.rs  elgamal.rs  governance.rs  hotkey.rs  lib.rs  types.rs  vote_commitment.rs  wallet_notes.rs  witness.rs  zkp1.rs  zkp2.rs
vote-commitment-tree/: Cargo.toml  README.md
vote-commitment-tree-client/: Cargo.toml
vote-commitment-tree-client/src/: http_sync_api.rs  lib.rs  main.rs  types.rs
vote-commitment-tree-client/tests/: mock_server_tests.rs
vote-commitment-tree/src/: anchor.rs  client.rs  hash.rs  kv_shard_store.rs  lib.rs  memory_server.rs  path.rs  serde.rs  server.rs  sync_api.rs
vote-commitment-tree/tests/: client_server_integration.rs
voting-circuits/: Cargo.toml
voting-circuits/benches/: delegation.rs
voting-circuits/src/: lib.rs  shares_hash.rs
voting-circuits/src/circuit/: address_ownership.rs  elgamal.rs  mod.rs  poseidon_merkle.rs  van_integrity.rs  vote_commitment.rs
voting-circuits/src/delegation/: builder.rs  circuit.rs  imt.rs  imt_circuit.rs  prove.rs
voting-circuits/src/delegation/plans/: delegation_nullifier_integrity_c85a05cf.plan.md  diversified_address_integrity_993cbba4.plan.md  gov_commitment_and_minweight_6225436d.plan.md  rho_binding_condition_3066b2db.plan.md  spend_authority_condition_5f3b6601.plan.md
voting-circuits/src/share_reveal/: builder.rs  circuit.rs  prove.rs
voting-circuits/src/vote_proof/: README.md  authority_decrement.rs  builder.rs  circuit.rs  mod.rs  prove.rs
zcash-light-client-ffi/: Makefile
zcash-swift-wallet-sdk/: Package.swift
zcash-voting-ffi/: Makefile
zcash-voting-ffi/rust/: Cargo.toml
zcash-voting-ffi/rust/src/: lib.rs
(+307 files in other folders)
