[package]
name = "e2e-tests"
version = "0.1.0"
edition = "2021"
description = "Rust E2E API tests for Zally voting flow (replaces TypeScript suite)"

[dependencies]
# Path deps (relative to repo root; e2e-tests is at root)
zally-circuits = { path = "../sdk/circuits" }
orchard = { path = "../orchard", features = ["delegation", "vote-proof"] }
vote-commitment-tree = { path = "../vote-commitment-tree" }

# HTTP and JSON
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Encoding
base64 = "0.22"
hex = "0.4"

# Round ID derivation (matches chain: Blake2b-256)
blake2b_simd = "1"

# ElGamal on Pallas
pasta_curves = "0.5"
ff = "0.13"
group = "0.13"

# RNG
rand = "0.8"
rand_core = "0.6"

# Delegation setup (Merkle tree)
incrementalmerkletree = "0.8"

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"
