[package]
name = "e2e-tests"
version = "0.1.0"
edition = "2021"
description = "Rust E2E API tests for Zally voting flow (replaces TypeScript suite)"

[dependencies]
# Path deps (relative to repo root; e2e-tests is at root)
zally-circuits = { path = "../sdk/circuits" }
orchard = { path = "../orchard" }
voting-circuits = { path = "../voting-circuits", features = ["delegation", "vote-proof", "share-reveal"] }
vote-commitment-tree = { path = "../vote-commitment-tree" }
vote-commitment-tree-client = { path = "../vote-commitment-tree-client" }
librustvoting = { path = "../librustvoting" }
zcash_client_backend = { path = "../librustzcash/zcash_client_backend", features = ["orchard"] }
prost = "0.14"

# HTTP and JSON
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Encoding
base64 = "0.22"
hex = "0.4"

# Round ID derivation (Poseidon hash)
halo2_gadgets = "0.3"

# Blake2b (still used for sighash in e2e setup)
blake2b_simd = "1"

# ElGamal on Pallas
pasta_curves = "0.5"
ff = "0.13"
group = "0.13"

# ECIES encryption (matching Go's sdk/crypto/ecies)
sha2 = "0.10"
chacha20poly1305 = "0.10"

# RNG
rand = "0.8"
rand_core = "0.6"

# Delegation setup (Merkle tree)
incrementalmerkletree = "0.8"

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"

# Patches needed for librustvoting's transitive deps to resolve to local paths
# (same pattern as zcash-voting-ffi/rust/Cargo.toml)
[patch.crates-io]
zcash_keys = { path = "../librustzcash/zcash_keys" }
zcash_protocol = { path = "../librustzcash/components/zcash_protocol" }
zcash_address = { path = "../librustzcash/components/zcash_address" }
zcash_encoding = { path = "../librustzcash/components/zcash_encoding" }
zcash_transparent = { path = "../librustzcash/zcash_transparent" }
zcash_client_sqlite = { path = "../librustzcash/zcash_client_sqlite" }
zcash_client_backend = { path = "../librustzcash/zcash_client_backend" }
zcash_primitives = { path = "../librustzcash/zcash_primitives" }
pczt = { path = "../librustzcash/pczt" }
orchard = { path = "../orchard" }

# Keep this crate as a standalone workspace
[workspace]
