[package]
name = "helper-server"
version = "0.1.0"
edition = "2021"
description = "Helper server for Zally voting: receives delegated shares, delays for unlinkability, generates witnesses + ZKP #3, submits MsgRevealShare"

[[bin]]
name = "helper-server"
path = "src/main.rs"

[[bin]]
name = "mock-tree"
path = "src/bin/mock_tree.rs"

[dependencies]
vote-commitment-tree = { path = "../vote-commitment-tree" }
vote-commitment-tree-client = { path = "../vote-commitment-tree-client" }
imt-tree = { path = "../nullifier-ingest/imt-tree" }

axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
pasta_curves = "0.5"
ff = "0.13"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
