[package]
name = "librustvoting"
version = "0.1.0"
edition = "2021"

[dependencies]
# Curves (same as Orchard/Zcash)
pasta_curves = "0.5"
ff = "0.13"
group = "0.13"

# Randomness
rand = "0.8"

# Hashing
blake2b_simd = "1"
halo2_gadgets = "0.3"

# Serialization
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Storage
rusqlite = { version = "0.37", features = ["bundled"] }

# Error handling
thiserror = "2"

# Zcash / Orchard note reconstruction
# Uses orchard 0.11 to match the wallet stack (zcash_keys, zcash_client_sqlite).
subtle = "2.6"
orchard = "0.11"
zcash_keys = { version = "0.12", features = ["orchard"] }
zcash_protocol = "0.7"
nonempty = "0.11"
zip32 = "0.2"

[patch.crates-io]
zcash_keys = { path = "../librustzcash/zcash_keys" }
zcash_protocol = { path = "../librustzcash/components/zcash_protocol" }
zcash_address = { path = "../librustzcash/components/zcash_address" }
zcash_encoding = { path = "../librustzcash/components/zcash_encoding" }
zcash_transparent = { path = "../librustzcash/zcash_transparent" }

# Keep this crate as a standalone workspace
[workspace]
