[package]
name = "librustvoting"
version = "0.1.0"
edition = "2021"

[dependencies]
# Curves (same as Orchard/Zcash)
pasta_curves = "0.5"
ff = "0.13"
group = "0.13"

# Randomness
rand = "0.8"

# Hashing
blake2b_simd = "1"
halo2_gadgets = "0.3"
halo2_proofs = "0.3"

# Serialization
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP (blocking IMT server calls for padded-note proofs)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# Storage
rusqlite = { version = "0.37", features = ["bundled"] }

# Error handling
thiserror = "2"

# Zcash / Orchard note reconstruction
# Uses orchard 0.11 to match the wallet stack (zcash_keys, zcash_client_sqlite).
subtle = "2.6"
orchard = { version = "0.11", features = ["delegation", "vote-proof"] }
zcash_keys = { version = "0.12", features = ["orchard"] }
zcash_protocol = "0.7"
nonempty = "0.11"
zip32 = "0.2"

# PCZT construction (governance-specific PCZT for Keystone signing)
pczt = { version = "0.5", features = ["orchard", "io-finalizer", "signer"] }

# Tree witness generation
zcash_client_sqlite = { version = "0.19", features = ["orchard"] }
zcash_client_backend = { version = "0.21", features = ["orchard"] }
zcash_primitives = "0.26"
incrementalmerkletree = "0.8"
shardtree = { version = "0.6", features = ["legacy-api"] }
prost = "0.14"

[patch.crates-io]
zcash_keys = { path = "../librustzcash/zcash_keys" }
zcash_protocol = { path = "../librustzcash/components/zcash_protocol" }
zcash_address = { path = "../librustzcash/components/zcash_address" }
zcash_encoding = { path = "../librustzcash/components/zcash_encoding" }
zcash_transparent = { path = "../librustzcash/zcash_transparent" }
zcash_client_sqlite = { path = "../librustzcash/zcash_client_sqlite" }
zcash_client_backend = { path = "../librustzcash/zcash_client_backend" }
zcash_primitives = { path = "../librustzcash/zcash_primitives" }
pczt = { path = "../librustzcash/pczt" }
orchard = { path = "../orchard" }

# Keep this crate as a standalone workspace
[workspace]
