[package]
name = "librustvoting"
version = "0.1.0"
edition = "2021"

[dependencies]
# Curves (same as Orchard/Zcash)
pasta_curves = "0.5"
ff = "0.13"
group = "0.13"

# Randomness
rand = "0.8"

# Hashing
blake2b_simd = "1"
halo2_gadgets = "0.3"
halo2_proofs = "0.3"

# Serialization
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# PIR (private nullifier exclusion proofs)
pir-client = { git = "https://github.com/valargroup/vote-nullifier-pir.git", branch = "main" }

# Vote commitment tree (VAN witness generation)
vote-commitment-tree = { path = "../vote-commitment-tree" }
vote-commitment-tree-client = { path = "../vote-commitment-tree-client" }

# Storage
rusqlite = { version = "0.37", features = ["bundled"] }

# Error handling
thiserror = "2"

# Zcash / Orchard
subtle = "2.6"
orchard = { version = "0.11" }
voting-circuits = { git = "https://github.com/valargroup/voting-circuits.git" }
zcash_keys = { version = "0.12", features = ["orchard"] }
zcash_protocol = "0.7"
nonempty = "0.11"
zip32 = "0.2"
incrementalmerkletree = "0.8"

# PCZT construction (governance-specific PCZT for Keystone signing)
pczt = { version = "0.5", features = ["orchard", "io-finalizer", "signer", "zcp-builder"] }
zcash_primitives = "0.26"
