[package]
name = "voting-circuits"
version = "0.1.0"
edition = "2021"
description = "Governance ZKP circuits (delegation, vote proof, share reveal) for the Shielded-Vote protocol"

[dependencies]
orchard = { path = "../orchard", features = ["circuit"] }
halo2_proofs = { version = "0.3", default-features = false, features = ["batch", "floor-planner-v1-legacy-pdqsort"] }
halo2_gadgets = { version = "0.3" }
pasta_curves = "0.5"
ff = { version = "0.13", default-features = false }
group = "0.13"
rand = { version = "0.8", default-features = false }
poseidon = { package = "halo2_poseidon", version = "0.1" }
incrementalmerkletree = "0.8.1"
lazy_static = "1"
sinsemilla = "0.1"

[dev-dependencies]
imt-tree = { git = "ssh://git@github.com/valargroup/vote-nullifier-pir.git", branch = "main" }
criterion = "0.4"
rand = "0.8"
incrementalmerkletree = "0.8.1"

[features]
default = ["std"]
std = []
share-reveal = []

[lib]
bench = false

[[bench]]
name = "delegation"
harness = false
