[package]
name = "nullifier-tree"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.40"
hex = "0.4.3"
orchard = { version = "0.3.0", features = ["vote"] }
prost = "0.10.3"
tokio = { version = "1.6", features = ["rt-multi-thread", "tokio-macros", "macros"] }
axum = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tonic = { version = "0.7.2", features = ["tls", "tls-roots"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
r2d2_sqlite = "0.22"
r2d2 = "0.8"
pasta_curves = "0.5"
ff = "0.13"
halo2_gadgets = { git = "https://github.com/zcash/halo2.git", rev = "642924d614305d882cc122739c59144109f4bd3f", default-features = false }
rayon = "1"

[patch.crates-io]
orchard = { git = "https://github.com/hhanh00/orchard.git", rev = "768c365" }
halo2_gadgets = { git = "https://github.com/zcash/halo2.git", rev = "642924d614305d882cc122739c59144109f4bd3f" }
halo2_proofs = { git = "https://github.com/zcash/halo2.git", rev = "642924d614305d882cc122739c59144109f4bd3f" }

[[bin]]
name = "ingest-nfs"
path = "src/bin/ingest_nfs.rs"

[[bin]]
name = "test-non-inclusion"
path = "src/bin/test_non_inclusion.rs"

[[bin]]
name = "query-server"
path = "src/bin/server.rs"
