[package]
name = "pir-export"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
rand = "0.8"

[features]
default = []
cli = ["dep:nullifier-service"]

[dependencies]
imt-tree = { path = "../imt-tree" }
nullifier-service = { path = "../service", optional = true }
anyhow = "1.0"
hex = "0.4"
ff = "0.13"
pasta_curves = "0.5"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "pir-export"
required-features = ["cli"]
