[package]
name = "nullifier-service"
version = "0.1.0"
edition = "2021"

[dependencies]
imt-tree = { path = "../imt-tree" }
anyhow = "1.0"
hex = "0.4"
ff = "0.13"
pasta_curves = "0.5"
rusqlite = { version = "0.29.0", features = ["bundled"] }
r2d2_sqlite = "0.22"
r2d2 = "0.8"
prost = "0.10.3"
tonic = { version = "0.7.2", features = ["tls", "tls-roots"] }
tokio = { version = "1.6", features = ["rt-multi-thread", "tokio-macros", "macros"] }
axum = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
orchard = { path = "../../orchard", features = ["delegation"] }
halo2_proofs = "0.3"
rand = "0.8"
incrementalmerkletree = "0.8.1"

[[bin]]
name = "ingest-nfs"
path = "src/bin/ingest_nfs.rs"

[[bin]]
name = "test-non-inclusion"
path = "src/bin/test_non_inclusion.rs"

[[bin]]
name = "query-server"
path = "src/bin/server.rs"
