[package]
name = "zally-circuits"
version = "0.1.0"
edition = "2021"
description = "Halo2 ZKP circuits and FFI verification for the Zally vote chain"

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
halo2_proofs = { version = "0.3", features = ["batch"] }
pasta_curves = "0.5"
group = "0.13"
rand_core = { version = "0.6", features = ["getrandom"] }
reddsa = { version = "0.5", default-features = false }
vote-commitment-tree = { path = "../../vote-commitment-tree" }
orchard = { path = "../../orchard" }
voting-circuits = { path = "../../voting-circuits", features = ["delegation", "vote-proof", "share-reveal"] }
incrementalmerkletree = "0.8"
hex = "0.4"
halo2_gadgets = "0.3"

[dependencies.ff]
version = "0.13"

[dev-dependencies]
rand_core = { version = "0.6", features = ["getrandom"] }
rand = "0.8"
reddsa = { version = "0.5", features = ["std"] }
blake2b_simd = "1"
serde_json = "1"
