[package]
name = "zcash-voting-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
librustvoting = { path = "../../librustvoting" }
uniffi = { version = "0.29", features = ["cli"] }
thiserror = "2"
orchard = "0.11"
zip32 = "0.2"
zcash_keys = { version = "0.12", features = ["orchard"] }
zcash_protocol = "0.7"

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"

[patch.crates-io]
zcash_keys = { path = "../../librustzcash/zcash_keys" }
zcash_protocol = { path = "../../librustzcash/components/zcash_protocol" }
zcash_address = { path = "../../librustzcash/components/zcash_address" }
zcash_encoding = { path = "../../librustzcash/components/zcash_encoding" }
zcash_transparent = { path = "../../librustzcash/zcash_transparent" }
zcash_client_sqlite = { path = "../../librustzcash/zcash_client_sqlite" }
zcash_client_backend = { path = "../../librustzcash/zcash_client_backend" }
zcash_primitives = { path = "../../librustzcash/zcash_primitives" }
pczt = { path = "../../librustzcash/pczt" }
orchard = { path = "../../orchard" }

# Keep this crate as a standalone workspace
[workspace]

# Speed up dev builds: parallel codegen + thin LTO.
# Full fat-LTO (the default) adds minutes with no benefit for a dev build.
[profile.release]
codegen-units = 16
lto = "thin"
